--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,23 @@
 * {
   box-sizing: content-box;
 }
+
+.slide-in {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0c1317;
+  transform-origin: bottom;
+}
+
+.slide-out {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #0c1317;
+  transform-origin: top;
+}
